# ai-anki-cards-maker

./: .gitignore  .lintstagedrc.json  .setup.cfg  README.md  SECURITY.md  SUPPORT.md  package.json  pyproject.toml  requirements.txt
docs/: README.md  README.rst  anki_card_maker.md  commandline.md  gpt_client.md  languages.md  main.md  requirements.txt  worker.md
docs/pages/: anki_card_maker.md  anki_card_maker.rst  commandline.md  commandline.rst  gpt_client.md  gpt_client.rst  languages.md  languages.rst  main.md  main.rst  worker.md  worker.rst
docs/source/: conf.py  index.rst
docs/source/pages/: anki_card_maker.rst
src/ankicardmaker/: __init__.py  anki_card_maker.py  ankicardmaker.py  commandline.py  config_parser.py  gpt_client.py  languages.py  main.py  mainbackup.py  pdf.py  worker.py
src/ankicardmaker/data/: ankicardmaker_config_file_schema.json  language_codes.json  prompt.jinja
src/ankicardmaker/dataclass/: anki_connect.py  openai_client.py
src/ankicardmaker/modules/anki_connect/: api_key.py  note.py  request.py  request_payoad.py  url.py
src/ankicardmaker/modules/command_line/: parser_args.py
src/ankicardmaker/modules/command_line/arguments/: deck_name.py  file.py  language.py  verbose.py  version.py
src/ankicardmaker/modules/config/: file.py  file_path.py  json_schema.py  json_schema_path.py  validator.py
src/ankicardmaker/modules/config/schema/: ankicardmaker_config_file_schema.json
src/ankicardmaker/modules/gpt_client/: api_key.py  base_url.py  gpt_client.py  model.py  model_temperature.py  prompt.py  prompt_template.py  request.py
src/ankicardmaker/modules/language/: codes.py  dictionary.py  languages.py  name.py
src/ankicardmaker/modules/main/: clipboard_to_anki_cards.py  file_to_anki_cards.py  pdf_to_anki_cards.py  run.py  verbose.py
src/ankicardmaker/modules/pdf/: file.py  pages_text.py
src/ankicardmaker/modules/pptx/: file.py  pages_text.py
src/ankicardmaker/modules/worker/: arguments.py  notes.py  notes_to_anki.py  run.py  verbose.py
tests/: test_anki_card_maker.py
tests/unit/: test_anki_card_maker.py  test_commandline.py  test_config_parser.py  test_gpt_client.py
